# CaloTriggerEmulator

./: .gitignore
CaloTriggerAnalysis/: CaloEmulatorTreeMaker.cc  CaloEmulatorTreeMaker.h  HCALEmulatorTreeMaker.cc  HCALEmulatorTreeMaker.h  MBDEmulatorTreeMaker.cc  MBDEmulatorTreeMaker.h  Makefile.am  Makefile.in  TrigTreeMaker.cc  TrigTreeMaker.h  TrigTreeMakerLinkDef.h  WaveTreeMaker.cc  WaveTreeMaker.h  WaveTreeMakerLinkDef.h  WaveformTreeMaker.h  WaveformTreeMakerLinkDef.h
CaloTriggerAnalysis/autom4te.cache/: traces.0
CaloTriggerEmulator/: CaloPacketGetter.cc  CaloPacketGetter.h  CaloPacketGetterLinkDef.h  CaloTriggerEmulator.cc  CaloTriggerEmulator.h  GL1PacketGetter.cc  GL1PacketGetter.h  GL1PacketGetterLinkDef.h  LL1Outv1.cc  LL1Outv2.cc  LL1Outv2.h  LL1PacketGetter.cc  MBDPacketGetter.cc  MBDPacketGetter.h  MBDPacketGetterLinkDef.h  MBDPmtBuilder.cc  MBDPmtBuilder.h  MBDPmtBuilderLinkDef.h  MBDTriggerEmulator.cc  MBDTriggerEmulator.h  MBDTriggerEmulatorLinkDef.h  MBDTriggerReco.cc  MBDTriggerReco.h  MBDTriggerRecoLinkDef.h  Makefile.am  Makefile.in  TriggerDefs.cc  TriggerDefs.h  TriggerPrimitive.cc  TriggerPrimitive.h  TriggerPrimitiveContainer.cc  TriggerPrimitiveContainerv1.cc  TriggerPrimitiveContainerv1.h  configure
CaloTriggerEmulator/autom4te.cache/: output.1
CaloWaveformSimulator/: CaloWaveFormSim.cc  CaloWaveFormSim.h
CaloWaveformSimulatorv2/: #CaloWaveFormSim.cc#  ADCDefs.h  CaloWaveFormSim.cc  CaloWaveFormSim.h  CaloWaveFormToy.cc  CaloWaveFormToy.h  Makefile.am  Makefile.in  WaveformContainer.cc  WaveformContainer.h  WaveformContainerLinkDef.h  WaveformContainerv1.cc  WaveformContainerv1.h  WaveformContainerv1LinkDef.h  WaveformReturnCodes.h  high_raddmgnoise.csv  laser_bbc_template.root  low_raddmgnoise.csv  medium_raddmgnoise.csv  no_raddmgnoise.csv  testbeam_cemc_template.root  testbeam_ihcal_template.root  testbeam_ohcal_template.root
CaloWaveformSimulatorv2/autom4te.cache/: output.0  traces.1
macros/: Fun4All_CaloTrigEmulator.C  Fun4All_CaloTrigSim.C  Fun4All_CaloTrigToy.C  Fun4All_CaloWaveFormSim.C  Fun4All_CosmicTriggerEmulator.C  Fun4All_G4_CaloTrigSim.C  Fun4All_G4_Waveform.C  Fun4All_GL1.cc  Fun4All_MBDLL1.C  Fun4All_MBDTrigSim.C  Fun4All_MBDTriggerEmulator.C
